fix user subs pagination, post text wrap

--- a/src/components/PostItem/PostItem.module.scss
+++ b/src/components/PostItem/PostItem.module.scss
@@ -54,7 +54,7 @@
     font-weight: 700;
     cursor: pointer;
     transition: color 0.3s;
-
+    word-break: break-all;
     &:hover {
       color: #487284;
     }
